--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
-    <title></title>
+    <title>Antony's contact</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
