Set background color in plain template

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <style>
+      body {
+        background-color: #0a0d13;
+      }
+    </style>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
